<resources>
    <string name="app_name">MemeThing</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="meme_thing">Meme\nThing</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_email_hint">Enter Email Here</string>
    <string name="enter_screen_name_hint">Enter Screen Name Here</string>
    <string name="enter_password_hint">Enter Password Here</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="new_game">New Game</string>
    <string name="games">Games</string>
    <string name="friends">Friends</string>
    <string name="profile">Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="edit">Edit</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
</resources>
