<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/bubblegum_sans"
        android:gravity="center"
        android:shadowColor="#007AFF"
        android:shadowRadius="20"
        android:text="@string/meme_thing"
        android:textColor="@android:color/white"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginTabLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/loginTabLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/login_tabs"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:tabIndicatorColor="@color/Orange"
        app:tabIndicatorHeight="100dp"
        app:tabTextColor="#FFFFFF">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.3"
        android:background="@drawable/login_view"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmailTextField"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/text_view"
            android:hint="@string/enter_email_hint"
            android:inputType="textNoSuggestions|textEmailAddress"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            app:boxBackgroundColor="#FFFFFF" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginScreenNameTextField"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/text_view"
            android:hint="@string/enter_screen_name_hint"
            android:inputType="textAutoCorrect|textCapWords"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            app:boxBackgroundColor="#FFFFFF" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordTextField"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/text_view"
            android:hint="@string/enter_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            app:boxBackgroundColor="#FFFFFF" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginConfirmPasswordTextField"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/text_view"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            app:boxBackgroundColor="#FFFFFF" />

        <TextView
            android:id="@+id/resetPasswordText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:onClick="resetPasswordButtonTapped"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:visibility="gone" />

    </LinearLayout>

    <Button
        android:id="@+id/loginSignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/submit_button"
        android:fontFamily="@font/bubblegum_sans"
        android:onClick="doneButtonTapped"
        android:paddingLeft="18dp"
        android:paddingTop="4dp"
        android:paddingRight="18dp"
        android:paddingBottom="4dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>