<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainMenuActivity">

    <TextView
        android:id="@+id/welcomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/welcome_label"
        android:fontFamily="@font/bubblegum_sans"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="TextView"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58000004" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <Button
            android:id="@+id/newGame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/meme_thing_button"
            android:fontFamily="@font/bubblegum_sans"
            android:onClick="newGameButtonTapped"
            android:text="@string/new_game"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="32sp" />

        <Button
            android:id="@+id/games"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/meme_thing_button"
            android:fontFamily="@font/bubblegum_sans"
            android:onClick="gamesButtonTapped"
            android:text="@string/games"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="32sp" />

        <Button
            android:id="@+id/friends"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/meme_thing_button"
            android:fontFamily="@font/bubblegum_sans"
            android:onClick="friendsButtonTapped"
            android:text="@string/friends"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="32sp" />

        <Button
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/meme_thing_button"
            android:fontFamily="@font/bubblegum_sans"
            android:onClick="profileButtonTapped"
            android:text="@string/profile"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="32sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>