<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".ProfileActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/profilePhotoCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="0dp"
        app:layout_constraintDimensionRatio="W,1:1"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.6">

            <ImageView
                android:id="@+id/profilePhotoImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="Profile picture"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/default_profile" />

        </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/editProfilePhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_button"
        android:clickable="true"
        android:fontFamily="@font/bubblegum_sans"
        android:onClick="editProfilePhotoButtonTapped"
        android:paddingLeft="10dp"
        android:paddingTop="4dp"
        android:paddingRight="12dp"
        android:paddingBottom="3dp"
        android:text="@string/edit"
        android:textColor="#4C4C4C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profilePhotoCardView"
        app:layout_constraintEnd_toEndOf="@+id/profilePhotoCardView"
        app:layout_constraintStart_toStartOf="@+id/profilePhotoCardView"
        app:layout_constraintTop_toTopOf="@+id/profilePhotoCardView"
        app:layout_constraintVertical_bias="0.95"
        android:paddingEnd="12dp"
        android:paddingStart="10dp"
        android:focusable="true" />

    <TextView
        android:id="@+id/profileEmailLabel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/table_cell_background"
        android:fontFamily="@font/bubblegum_sans"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhotoCardView"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/profileResetPasswordButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/table_cell_background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:onClick="resetPasswordButtonTapped"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:text="@string/reset_password"
        android:textColor="#DEDEDE"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmailLabel"
        app:layout_constraintWidth_percent="0.9" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/table_cell_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileResetPasswordButton"
        app:layout_constraintWidth_percent="0.9">

        <TextView
            android:id="@+id/profileScreenNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/bubblegum_sans"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/editSceenNameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="editScreenNameButtonTapped"
            android:text="@string/edit"
            android:textColor="#DEDEDE"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/table_cell_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintWidth_percent="0.9">

        <TextView
            android:id="@+id/profilePointsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/bubblegum_sans"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="8dp" />

        <ImageView
            android:id="@+id/profilePointsInfoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="0"
            android:clickable="true"
            android:contentDescription="points information button"
            android:focusable="true"
            android:onClick="pointsInfoButtonTapped"
            android:tint="#ffffff"
            app:srcCompat="@android:drawable/ic_menu_info_details" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.07"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <Button
            android:id="@+id/deleteAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/red_button"
            android:fontFamily="@font/bubblegum_sans"
            android:onClick="deleteAccountButtonTapped"
            android:text="@string/delete_account"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/signOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/meme_thing_button"
            android:fontFamily="@font/bubblegum_sans"
            android:onClick="signOutButtonTapped"
            android:text="@string/sign_out"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>